--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "bootstrap": "^5.3.2",
     "handsontable": "^14.1.0",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -32,6 +31,7 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.17",
     "daisyui": "^4.6.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -39,6 +39,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.2.2"
   }
 }
