--- a/package.json
+++ b/package.json
@@ -11,40 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.1",
-    "@angular/cdk": "^17.1.1",
-    "@angular/common": "^17.1.1",
-    "@angular/compiler": "^17.1.1",
-    "@angular/core": "^17.1.1",
-    "@angular/forms": "^17.1.1",
-    "@angular/material": "^17.3.8",
-    "@angular/platform-browser": "^17.1.1",
-    "@angular/platform-browser-dynamic": "^17.1.1",
-    "@angular/router": "^17.1.1",
-    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@angular/animations": "17.3.9",
+    "@angular/cdk": "17.3.9",
+    "@angular/common": "17.3.9",
+    "@angular/compiler": "17.3.9",
+    "@angular/core": "17.3.9",
+    "@angular/forms": "17.3.9",
+    "@angular/material": "^17.3.9",
+    "@angular/platform-browser": "17.3.9",
+    "@angular/platform-browser-dynamic": "17.3.9",
+    "@angular/router": "17.3.9",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@handsontable/angular": "^14.3.0",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "handsontable": "^14.3.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "luxon": "^3.4.4",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "^17.1.1",
-    "@angular/compiler-cli": "^17.1.1",
-    "@types/jasmine": "~5.1.0",
-    "autoprefixer": "^10.4.17",
-    "daisyui": "^4.6.0",
-    "jasmine-core": "~5.1.0",
-    "json-server": "^1.0.0-alpha.23",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "17.3.7",
+    "@angular/cli": "17.3.7",
+    "@angular/compiler-cli": "17.3.9",
+    "@types/jasmine": "~5.1.4",
+    "@types/luxon": "^3.4.2",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
+    "jasmine-core": "~5.1.2",
+    "json-server": "1.0.0-beta.0",
+    "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "~5.2.2"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.5"
   }
 }
